infrastructure/apps/analytics-service/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: analytics-service
  namespace: mrun-apps
  annotations:
    consul.hashicorp.com/service-name: analytics-service
    consul.hashicorp.com/service-port: "3005"

spec:
  selector:
    app.kubernetes.io/name: analytics-service
  ports:
    - name: http
      port: 3005
      targetPort: 3005
  type: ClusterIP
